2014-03-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (hack-local-variables): Mention file name in warning.

	* htmlfontify.el (hfy-fontify-buffer): Drop `invis-range' message.

2014-03-04  Michal Nazarewicz  <mina86@mina86.com>

	* binding.el: Add comment describing why C-d binds to `delete-char'.
	* simple.el (delete-forward-char): Mark as interactive-only.

2014-03-03  Juanma Barranquero  <lekktu@gmail.com>

	* icomplete.el (icomplete-completions):
	Follow-up to 2014-03-01 change.

	* icomplete.el: Miscellaneous doc fixes.
	Use Icomplete everywhere instead of icomplete for consistency.
	(icomplete-max-delay-chars): Fix typo.
	(icomplete-mode): Use \[].
	(icomplete-tidy, icomplete-exhibit): Reflow.
	(icomplete-minibuffer-setup-hook, icomplete-completions):
	Remove superfluous backlashes.

	* ido.el: Miscellaneous doc fixes.
	Use Ido everywhere instead of ido or `ido' for consistency.
	(ido-record-ftp-work-directories, ido-merge-ftp-work-directories)
	(ido-cache-ftp-work-directory-time, ido-slow-ftp-hosts)
	(ido-slow-ftp-host-regexps, ido-reread-directory): Upcase "ftp".
	(ido-separator): Extract obsolescence info from docstring and declare
	with make-obsolete-variable.
	(ido-minibuffer-setup-hook): Simplify example.
	(ido-text, ido-text-init, ido-input-stack, ido-report-no-match)
	(ido-wide-find-file, ido-wide-find-dir, ido-wide-find-dir-or-delete-dir)
	(ido-completion-help, ido-completing-read): Fix typos in docstrings.
	(ido-everywhere): Reflow docstring.
	(ido-toggle-vc): Doc fix.
	(ido-switch-buffer, ido-find-file): Use tabs to improve legibility
	of long list of keybindings.

2014-03-03  Glenn Morris  <rgm@gnu.org>

	* frame.el (display-pixel-height, display-pixel-width)
	(display-mm-dimensions-alist, display-mm-height)
	(display-mm-width): Doc tweaks.

2014-03-02  Barry O'Reilly  <gundaetiapo@gmail.com>

	* simple.el (undo-elt-in-region): Fix buffer corruption for edge
	case of undo in region.

2014-03-02  Martin Rudalics  <rudalics@gmx.at>
